[PATCH] Fixed double scrollbars

--- a/client/app/sass/default.scss
+++ b/client/app/sass/default.scss
@@ -9,6 +9,9 @@ html, body {
     color: $faded-black;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
+}
+
+html {
     overflow-y: scroll;
 }
 
